--- a/templates/vlc/frontend/landing.html
+++ b/templates/vlc/frontend/landing.html
@@ -14,7 +14,7 @@
 
     <!-- <link rel="stylesheet" href=" /static/landing/style-tmp.css" /> -->
     <link rel="stylesheet" href="{% static 'landing/style-tmp.css' %}" />
-    <!-- <link rel="stylesheet" href="{% static 'landing/style-tmp.css' %}?v=1.0" /> -->
+    <link rel="stylesheet" href="{% static 'landing/landing.css' %}" />
     <link href="https://vjs.zencdn.net/7.20.3/video-js.css" rel="stylesheet" />
     <script src="https://vjs.zencdn.net/7.20.3/video.min.js"></script>
 
@@ -468,7 +468,7 @@
                 <div class="hiw-element-text-container">
                     <div class="hiw-element-heading">1. pick video dimensions:</div>
                     <div class="hiw-element-text hew">
-                        <i class="fa-solid fa-check"></i>
+                        <img src="{% static 'assets/icons/check.svg' %}" alt="" />
                         <div class="adjust">
                             <p>select the format that fits your platform:</p>
                             <div class="dimensions-container">
@@ -490,7 +490,7 @@
                 <div class="hiw-element-text-container">
                     <div class="hiw-element-heading">2. Add AI voiceover</div>
                     <div class="hiw-element-text hew-t">
-                        <i class="fa-solid fa-check"></i>
+                        <img src="{% static 'assets/icons/check.svg' %}" alt="" />
                         <p>Paste Your API Key And Voice ID, And Let Al Create Realistic, Human-Like
                             Voiceovers - No Robotic Tones Here.</p>
                     </div>
@@ -500,7 +500,7 @@
                 <div class="hiw-element-text-container">
                     <div class="hiw-element-heading">3. Upload Your Script:</div>
                     <div class="hiw-element-text hew-t">
-                        <i class="fa-solid fa-check"></i>
+                        <img src="{% static 'assets/icons/check.svg' %}" alt="" />
                         <p>Simply Upload Your Script, Then
                             Highlight The Words You Want To Pair With Video Clips:</p>
                     </div>
@@ -513,7 +513,7 @@
                 <div class="hiw-element-text-container">
                     <div class="hiw-element-heading">4. Build Your Asset Library:</div>
                     <div class="hiw-element-text hew-t">
-                        <i class="fa-solid fa-check"></i>
+                        <img src="{% static 'assets/icons/check.svg' %}" alt="" />
                         <p>Organize Your Clips Into Folders (E.G.,
                             "Product Demos" Or "Male Crying
                             Clips") For Easy Reuse Across Multiple Projects. No More Searching Through Files.</p>
@@ -524,7 +524,7 @@
                 <div class="hiw-element-text-container">
                     <div class="hiw-element-heading">5. Match Clips To Script</div>
                     <div class="hiw-element-text hew-t">
-                        <i class="fa-solid fa-check"></i>
+                        <img src="{% static 'assets/icons/check.svg' %}" alt="" />
                         <p>5. Highlight The Text, Then Select A Clip From Your Asset Library Or Computer.
                             VideoCrafter lo Takes Care Of Cropping, Syncing, And Aligning Everything Perfectly.</p>
                     </div>
@@ -537,7 +537,7 @@
                 <div class="hiw-element-text-container">
                     <div class="hiw-element-heading">6. Add Background Music</div>
                     <div class="hiw-element-text hew-t">
-                        <i class="fa-solid fa-check"></i>
+                        <img src="{% static 'assets/icons/check.svg' %}" alt="" />
                         <p>Upload Your Favorite MP3 Tracks, Set Start/End Points, And Adjust The Volume To Bring Your
                             Videos To Life.</p>
                     </div>
