--- a/templates/vlc/frontend/landing.html
+++ b/templates/vlc/frontend/landing.html
@@ -13,8 +13,7 @@
     {% include 'partials/head_c.html' %}
     
 
-  <!-- <link rel="stylesheet" href="{% static 'landing/style-tmp.css' %}" /> -->
-  <link rel="stylesheet" href=" /static/landing/style-tmp.css" />
+  <link rel="stylesheet" href="{% static 'landing/style-tmp.css' %}" />
 
   <link href="https://vjs.zencdn.net/7.20.3/video-js.css" rel="stylesheet" />
 <script src="https://vjs.zencdn.net/7.20.3/video.min.js"></script>
