--- a/templates/vlc/frontend/landing.html
+++ b/templates/vlc/frontend/landing.html
@@ -11,9 +11,14 @@
     <meta http-equiv="Expires" content="0" />
 
     {% include 'partials/head_c.html' %}
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css"
+        integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="/static//landing/landing.css">
+    <link rel="stylesheet" href="/static/landing/style-tmp.css" />
 
-    <link rel="stylesheet" href=" /static/landing/style-tmp.css" />
     <!-- <link rel="stylesheet" href="{% static 'landing/style-tmp.css' %}" /> -->
+    <!-- <link rel="stylesheet" href="{% static 'landing/landing.css' %}" /> -->
     <link href="https://vjs.zencdn.net/7.20.3/video-js.css" rel="stylesheet" />
     <script src="https://vjs.zencdn.net/7.20.3/video.min.js"></script>
 
@@ -61,7 +66,8 @@
         </div>
     </div>
 
-    <div class="portfolio">
+
+    <div class="portfolio" id="Portfolio">
         <div class="portfoliotext mtg">
             <h2 class="for-marg">
                 Why We Built
@@ -449,7 +455,15 @@
 
     </div>
 
+
+
+
     <div class="howitworks" id="HowItWorks">
+        <img src="{% static 'assets/background/Ellipse 2.svg' %}" alt="" class="" />
+        <img src="{% static 'assets/background/Ellipse 2.svg' %}" alt="" class="" />
+        <img src="{% static 'assets/background/Ellipse 2.svg' %}" alt="" class="" />
+        <img src="{% static 'assets/background/Ellipse 2.svg' %}" alt="" class="" />
+        <img src="{% static 'assets/background/Ellipse 2.svg' %}" alt="" class="" />
         <div class="hiw-heading-text">
             How <span class="highlight">VideoCrafter<span style="font-size: 16px;">.io</span></span>
             <span style="color: #000000;">works:</span>
@@ -536,6 +550,7 @@
             </div>
         </div>
     </div>
+
 
     <div class="portfolio main-eature-container" id="Portfolio">
         <div class="portfoliotext">
@@ -714,6 +729,30 @@
                         <a href="/accounts/subscribe/{{ price_ids.pro }}?success_path={% url 'accounts:register' %}&cancel_path={% url 'home:home' %}"
                             class="p-button">Get Started</a>
                     </div>
+
+                    <!-- <div class="bottom">
+                        <div class="bottom-heading">All Plans Include</div>
+
+                        <div class="more-benefits">
+                            <div class="more-benefits-items">
+                                <img src="{% static 'assets/icons/check.svg' %}" alt="" />
+                                <span class="more-benefits-text">Ability to upload your own video clips and
+                                    assets</span>
+                            </div>
+                            <div class="more-benefits-items">
+                                <img src="{% static 'assets/icons/check.svg' %}" alt="" />
+                                <span class="more-benefits-text">Customizable background music and timing</span>
+                            </div>
+                            <div class="more-benefits-items">
+                                <img src="{% static 'assets/icons/check.svg' %}" alt="" />
+                                <span class="more-benefits-text">Fast, easy, and intuitive interface</span>
+                            </div>
+                            <div class="more-benefits-items">
+                                <img src="{% static 'assets/icons/check.svg' %}" alt="" />
+                                <span class="more-benefits-text">No video editing skills required</span>
+                            </div>
+                        </div>
+                    </div> -->
                 </div>
             </div>
         </div>
