--- a/templates/vlc/frontend/landing.html
+++ b/templates/vlc/frontend/landing.html
@@ -14,11 +14,11 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css"
         integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link rel="stylesheet" href="/static//landing/landing.css">
-    <link rel="stylesheet" href="/static/landing/style-tmp.css" />
+    <!-- <link rel="stylesheet" href="/static//landing/landing.css"> -->
+    <!-- <link rel="stylesheet" href="/static/landing/style-tmp.css" /> -->
 
-    <!-- <link rel="stylesheet" href="{% static 'landing/style-tmp.css' %}" /> -->
-    <!-- <link rel="stylesheet" href="{% static 'landing/landing.css' %}" /> -->
+    <link rel="stylesheet" href="{% static 'landing/style-tmp.css' %}" />
+    <link rel="stylesheet" href="{% static 'landing/landing.css' %}" />
     <link href="https://vjs.zencdn.net/7.20.3/video-js.css" rel="stylesheet" />
     <script src="https://vjs.zencdn.net/7.20.3/video.min.js"></script>
 
