--- a/templates/vlc/frontend/landing.html
+++ b/templates/vlc/frontend/landing.html
@@ -150,7 +150,11 @@
             <h2 class="subtitle">TikTok Ad Examples</h2>
             <div class="grid-container">
                 <div class="grid-item">
-                    <video src="{% static 'videos/tiktok/tiktok1.mp4' %}" class="tiktok-video" controls></video>
+                    <video id="my-video" class="video-js tiktok-video" controls preload="auto" width="640" height="360"
+                        data-setup='{}'>
+                        <source src="{% static 'videos/tiktok/tiktok1.mp4' %}" type="video/mp4" />
+                    </video>
+                    <!-- <video src="{% static 'videos/tiktok/tiktok1.mp4' %}" class="tiktok-video" controls></video> -->
                 </div>
                 <div class="grid-item">
                     <video src="{% static 'videos/tiktok/tiktok2.mp4' %}" class="tiktok-video" controls></video>
