vvideo player fix

--- a/templates/vlc/frontend/landing.html
+++ b/templates/vlc/frontend/landing.html
@@ -159,7 +159,7 @@
                 </div>
                 <div class="grid-item">
                     <div class="flowplayer">
-                        <video>
+                        <video class="tiktok-video">
                             <source type="application/x-mpegURL" src="{% static 'videos/tiktok/tiktok2.mp4' %}">
                         </video>
                     </div>
