vvideo player fix

--- a/templates/vlc/frontend/landing.html
+++ b/templates/vlc/frontend/landing.html
@@ -17,10 +17,7 @@
     <!-- <link rel="stylesheet" href="/static//landing/landing.css"> -->
     <!-- <link rel="stylesheet" href="/static/landing/style-tmp.css" /> -->
 
-    <link rel="stylesheet" href="{% static 'landing/style-tmp.css' %}" />
-    <!-- <link rel="stylesheet" href="{% static 'landing/landing.css' %}" /> -->
-    <!-- <link href="https://vjs.zencdn.net/7.20.3/video-js.css" rel="stylesheet" />
-    <script src="https://vjs.zencdn.net/7.20.3/video.min.js"></script> -->
+    <link rel="stylesheet" href="{% static 'landing/landing_style.css' %}" />
 
     <link href="https://vjs.zencdn.net/8.0.4/video-js.css" rel="stylesheet" />
     <script src="https://vjs.zencdn.net/8.0.4/video.min.js"></script>
